[package]
name = "vorto"
version = "0.1.0"
edition = "2024"
build = "build.rs"
repository = "https://github.com/ero-amai/vorto"

[dependencies]
libc = "0.2"
relayport-rs = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.48.0", features = ["full"] }
udpproxi = "0.1.1"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
panic = "unwind"
strip = "debuginfo"
